# Make-Code-Easier

./: CMakeLists.txt  Readme.md
config/: TableParam05.yaml  cam0_pinhole.yaml  cam1_pinhole.yaml  out.yaml  out1.yaml  test.xml  vioParam.yaml
include/common/: common.hpp  error_code.hpp  fargs.hpp
src/: CMakeLists.txt
src/yaml_parser/: CMakeLists.txt  parse_yaml.cpp  parse_yaml.hpp
test/: CMakeLists.txt
test/yaml_parser/: main.cpp
